# collections

./: .gitignore  .utopinit  GNUmakefile  collections.ml  collections.opam  dune  dune-project  example.json  generate_schemas.ml  http.cfg
lib/: api.ml  api_intf.ml  defaults.ml  defaults.mli  dune  encoding.ml  endpoint.ml  endpoint.mli  endpoint_intf.ml  fetch.ml  httpr_intf.ml  httpr_ocamlnet.ml  json.ml  lib.ml  printing.ml  printing.mli  sparql.ml  url.ml  url.mli  url_intf.ml  utils.ml  utils.mli  utils.shutoffmli  utils_intf.ml
lib/getBrowseListContributors/: getBrowseListContributors.ml  getBrowseListContributors.mli
lib/getBrowseListDates/: getBrowseListDates.ml
lib/getBrowseListLanguages/: getBrowseListLanguages.ml
lib/getBrowseListLocations/: getBrowseListLocations.ml
lib/getItem/: getItem.ml
lib/getParent/: getParent.ml
lib/getResultsByKeyword/: getResultsByKeyword.ml
lib/getSeries/: getSeries.ml
makefiles/: Makefile.deploy
schemas/input/: getBrowseListContributors.json  getBrowseListDates.json  getBrowseListLanguages.json  getBrowseListLocations.json  getItem.json  getResultsByKeyword.json
schemas/output/: getBrowseListContributors.json  getBrowseListLocations.json  getItem.json
test/: dune
