(dirs :standard
      "schema/input"
      "schema/output")

(executable
 (public_name collections)
 (name collections)
 (promote (until-clean))
 (libraries camlp-streams
            prelude
            mattlude
            lib
            restful
            nettls-gnutls
            netclient
            threads)
 (modules collections))

(executable
 (public_name generate-schemas)
 (name generate_schemas)
 (promote (until-clean))
 (libraries camlp-streams
            prelude
            mattlude
            lib)
 (modules generate_schemas))

(env
  (dev
    (flags (:standard -warn-error -A))))
