(include_subdirs unqualified)

(library
 (name lib)
 (libraries prelude
            mattlude
            restful
            cohttp
            cohttp-lwt
            cohttp-lwt-unix
            tls-lwt
            data-encoding
            ezjsonm
            nettls-gnutls
            netclient))

(env
  (dev
    (flags (:standard -warn-error -A))))
